// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> should match the snapshots 1`] = `
<DocumentFragment>
  .c2 {
  color: #1250C4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-weight: 700;
}

.c2:hover {
  color: #DE0059;
}

.c2:visited {
  color: #5734BA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style: none;
  overflow: auto;
  padding: 12px 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 span {
  color: #424242;
}

.c1 + li {
  margin-left: 8px;
}

.c1[aria-hidden='true'] {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  visibility: hidden;
}

.c3 {
  margin-right: 4px;
  color: #1250C4;
}

.c4 {
  margin-right: 8px;
  color: #1250C4;
}

.c5 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  color: #1250C4;
}

.c5:hover {
  font-weight: 700;
}

<nav>
    <ol
      aria-label="breadcrumb"
      class="c0"
      id="breadcrumbs-list"
    >
      <li
        class="c1"
      >
        <a
          class="c2"
          href="catho.com"
          title="Home"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-1696fkf-MuiSvgIcon-root"
            data-qtm-preloader="icon"
            data-testid="HomeIcon"
            focusable="false"
            style="font-size: 16px; max-width: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          Home
        </a>
      </li>
      <li
        aria-hidden="true"
        class="c1"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <button
          aria-controls="breadcrumbs-list"
          aria-expanded="true"
          aria-label="Exibir todas as opções"
          class="c5"
          title="Exibir todas as opções"
          type="button"
        >
          ...
        </button>
      </li>
      <li
        aria-hidden="false"
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <a
          class="c2"
          href="catho.com"
          title="Quantum"
        >
          Quantum
        </a>
      </li>
      <li
        aria-hidden="false"
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <a
          class="c2"
          href="catho.com"
          title="Components"
        >
          Components
        </a>
      </li>
      <li
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <span>
          Breadcrumbs
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`<Breadcrumbs /> should match the snapshots when breadcrumbs is collapsed 1`] = `
<DocumentFragment>
  .c2 {
  color: #1250C4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-weight: 700;
}

.c2:hover {
  color: #DE0059;
}

.c2:visited {
  color: #5734BA;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style: none;
  overflow: auto;
  padding: 12px 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 span {
  color: #424242;
}

.c1 + li {
  margin-left: 8px;
}

.c1[aria-hidden='true'] {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  visibility: hidden;
}

.c3 {
  margin-right: 4px;
  color: #1250C4;
}

.c4 {
  margin-right: 8px;
  color: #1250C4;
}

.c5 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  color: #1250C4;
}

.c5:hover {
  font-weight: 700;
}

<nav>
    <ol
      aria-label="breadcrumb"
      class="c0"
      id="breadcrumbs-list"
    >
      <li
        class="c1"
      >
        <a
          class="c2"
          href="catho.com"
          title="Home"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-1696fkf-MuiSvgIcon-root"
            data-qtm-preloader="icon"
            data-testid="HomeIcon"
            focusable="false"
            style="font-size: 16px; max-width: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          Home
        </a>
      </li>
      <li
        aria-hidden="false"
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <button
          aria-controls="breadcrumbs-list"
          aria-expanded="false"
          aria-label="Exibir todas as opções"
          class="c5"
          title="Exibir todas as opções"
          type="button"
        >
          ...
        </button>
      </li>
      <li
        aria-hidden="true"
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <a
          class="c2"
          href="catho.com"
          title="Quantum"
        >
          Quantum
        </a>
      </li>
      <li
        aria-hidden="true"
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <a
          class="c2"
          href="catho.com"
          title="Components"
        >
          Components
        </a>
      </li>
      <li
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c4 css-1696fkf-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="KeyboardArrowRightIcon"
          focusable="false"
          style="font-size: 16px; max-width: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
        <span>
          Breadcrumbs
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`<Breadcrumbs /> should match the snapshots when collapsed breadcrumbs is expanded 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -28,12 +28,13 @@
            </svg>
            Home
          </a>
        </li>
        <li
-         aria-hidden=\\"false\\"
+         aria-hidden=\\"true\\"
          class=\\"Breadcrumbs__BreadcrumbItem-sc-d5msik-1 gKyFCs\\"
+         hidden=\\"\\"
        >
          <svg
            aria-hidden=\\"true\\"
            class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Breadcrumbs__BreadcrumbIcon-sc-d5msik-2 bJMWQD css-1696fkf-MuiSvgIcon-root\\"
            data-qtm-preloader=\\"icon\\"
@@ -46,21 +47,21 @@
              d=\\"M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z\\"
            />
          </svg>
          <button
            aria-controls=\\"breadcrumbs-list\\"
-           aria-expanded=\\"false\\"
+           aria-expanded=\\"true\\"
            aria-label=\\"Exibir todas as opções\\"
            class=\\"Breadcrumbs__ExpandButton-sc-d5msik-3 dPyeD\\"
            title=\\"Exibir todas as opções\\"
            type=\\"button\\"
          >
            ...
          </button>
        </li>
        <li
-         aria-hidden=\\"true\\"
+         aria-hidden=\\"false\\"
          class=\\"Breadcrumbs__BreadcrumbItem-sc-d5msik-1 gKyFCs\\"
        >
          <svg
            aria-hidden=\\"true\\"
            class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Breadcrumbs__BreadcrumbIcon-sc-d5msik-2 bJMWQD css-1696fkf-MuiSvgIcon-root\\"
@@ -81,11 +82,11 @@
          >
            Quantum
          </a>
        </li>
        <li
-         aria-hidden=\\"true\\"
+         aria-hidden=\\"false\\"
          class=\\"Breadcrumbs__BreadcrumbItem-sc-d5msik-1 gKyFCs\\"
        >
          <svg
            aria-hidden=\\"true\\"
            class=\\"MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Breadcrumbs__BreadcrumbIcon-sc-d5msik-2 bJMWQD css-1696fkf-MuiSvgIcon-root\\""
`;
